# gateway/swagger/tuya-gateway.yaml
@@ -8,6 +8,55 @@ consumes:
 produces:
   - application/json
 paths:
+  /homes:
+    get:
+      tags: [ Home ]
+      operationId: nanotuya.api.get_homes
+      summary: Get homes available for user
+      parameters:
+        - $ref: '#/parameters/user_id'
+      responses:
+        200:
+          description: Return list of homes
+          schema:
+            type: object
+            properties:
+              functions:
+                type: object
+  /home/scenes:
+    get:
+      tags: [ Home ]
+      operationId: nanotuya.api.get_scenes
+      summary: Get scenes available in home
+      parameters:
+        - $ref: '#/parameters/home_id'
+      responses:
+        200:
+          description: Return list of scenes
+          schema:
+            type: object
+            properties:
+              functions:
+                type: object
+    post:
+      tags: [ IR ]
+      operationId: nanotuya.api.post_trigger_scene
+      summary: Trigger scene
+      parameters:
+        - $ref: '#/parameters/home_id'
+        - $ref: '#/parameters/scene_id'
+        - name: payload
+          in: body
+          schema:
+            $ref: '#/definitions/payload'
+      responses:
+        200:
+          description: Trigger scene
+          schema:
+            type: object
+            properties:
+              functions:
+                type: object
   /device/status:
     get:
       tags: [Devices]
@@ -125,6 +174,27 @@ parameters:
     type: string
     required: true
     pattern: "^[a-zA-Z0-9-]+$"
+  scene_id:
+    name: scene_id
+    description: Tuya scene unique identifier
+    in: query
+    type: string
+    required: true
+    pattern: "^[a-zA-Z0-9-]+$"
+  user_id:
+    name: user_id
+    description: Tuya scene unique identifier
+    in: query
+    type: string
+    required: true
+    pattern: "^[a-zA-Z0-9-]+$"
+  home_id:
+    name: home_id
+    description: Tuya Home unique identifier
+    in: query
+    type: string
+    required: true
+    pattern: "^[0-9-]+$"
 
 definitions:
   payload:
