# nanotuya/api.py
@@ -5,8 +5,10 @@ from os import environ as env
 
 from nanotuya.cls import auth
 
-DEVICE_URL = "https://openapi.tuya{region}.com/v1.0/devices/{device_id}/{endpoint}"
-IR_URL = "https://openapi.tuya{region}.com/v1.0/infrareds/{device_id}/{endpoint}"
+DEVICE_URL = "https://openapi.tuya{region}.com/v1.0/devices/{id}/{endpoint}"    # id = device_id
+IR_URL = "https://openapi.tuya{region}.com/v1.0/infrareds/{id}/{endpoint}"      # id = infrared_id
+USER_URL = "https://openapi.tuya{region}.com/v1.0/users/{id}/{endpoint}"        # id = uid (user_id)
+HOME_URL = "https://openapi.tuya{region}.com/v1.0/homes/{id}/{endpoint}"        # id = home_id
 
 
 def _logger(response: requests.Response):
@@ -25,10 +27,10 @@ def _api_request_headers() -> dict:
     return tuya_auth.headers
 
 
-def _url_format(device_id: str, endpoint: str, url: str = DEVICE_URL) -> str:
+def _url_format(id: str, endpoint: str, url: str = DEVICE_URL) -> str:
     url = url.format(
         region=env.get("TUYA_REGION"),
-        device_id=device_id,
+        id=id,
         endpoint=endpoint,
     )
 
@@ -42,7 +44,7 @@ async def get_device_functions(device_id: str) -> dict:
     :return: Dictionary with HTTP response
     """
     response = requests.get(
-        url=_url_format(device_id=device_id, endpoint="functions"),
+        url=_url_format(id=device_id, endpoint="functions"),
         headers=_api_request_headers(),
     )
     _logger(response=response)
@@ -56,7 +58,7 @@ async def get_device_status(device_id: str):
     :return: Dictionary with HTTP response
     """
     response = requests.get(
-        url=_url_format(device_id=device_id, endpoint="status"),
+        url=_url_format(id=device_id, endpoint="status"),
         headers=_api_request_headers(),
     )
     _logger(response=response)
@@ -79,7 +81,7 @@ async def post_device_commands(device_id: str, payload: dict) -> dict:
     """
     # fmt: on
     response = requests.post(
-        url=_url_format(device_id=device_id, endpoint="commands"),
+        url=_url_format(id=device_id, endpoint="commands"),
         headers=_api_request_headers(),
         data=json.dumps(payload),
     )
@@ -94,7 +96,7 @@ async def get_ir_device_remotes(device_id: str) -> dict:
     :return: Dictionary with with HTTP response.
     """
     response = requests.get(
-        url=_url_format(device_id=device_id, endpoint="remotes", url=IR_URL),
+        url=_url_format(id=device_id, endpoint="remotes", url=IR_URL),
         headers=_api_request_headers(),
     )
     _logger(response=response)
@@ -110,7 +112,7 @@ async def get_ir_remote_keys(device_id: str, remote_id: str) -> dict:
     Returns:
     """
     keys = {}
-    base_url = _url_format(device_id=device_id, endpoint='remotes', url=IR_URL)
+    base_url = _url_format(id=device_id, endpoint='remotes', url=IR_URL)
 
     # Native keys and learned keys have different endpoints, call both and put the results in one dictionary.
     # If remote does not have any native keys, the response is "code:2010, msg:device not exist".
@@ -133,7 +135,7 @@ async def get_ir_remote_keys(device_id: str, remote_id: str) -> dict:
 
 
 async def post_ir_remote_key(device_id: str, remote_id: str, payload: dict) -> dict:
-    base_url = _url_format(device_id=device_id, endpoint='remotes', url=IR_URL)
+    base_url = _url_format(id=device_id, endpoint='remotes', url=IR_URL)
 
     # {"code" : <value>} for "custom", {"key": <value>} for "native"
     if payload.get("type", "native") == "custom":
@@ -153,3 +155,53 @@ async def post_ir_remote_key(device_id: str, remote_id: str, payload: dict) -> d
     return json.loads(response.content.decode())
 
 
+async def get_homes(user_id: str) -> dict:
+    """
+    Get list of homes where user has access.
+    :param user_id: ID of the user (can be obtained from Tuya IoT portal).
+    :return: Dictionary with with HTTP response.
+    """
+    base_url = _url_format(id=user_id, endpoint='homes', url=USER_URL)
+
+    response = requests.get(
+        url=base_url,
+        headers=_api_request_headers(),
+    )
+
+    _logger(response=response)
+    return json.loads(response.content.decode())
+
+
+async def get_scenes(home_id: str) -> dict:
+    """
+    Get list of scenes created in home.
+    :param home_id: ID of the home (user who is used to "Link Devices by App Account" should be a "Home Owner")
+    :return: Dictionary with with HTTP response.
+    """
+    base_url = _url_format(id=home_id, endpoint='scenes', url=HOME_URL)
+
+    response = requests.get(
+        url=base_url,
+        headers=_api_request_headers(),
+    )
+
+    _logger(response=response)
+    return json.loads(response.content.decode())
+
+
+async def post_trigger_scene(home_id: str, scene_id: str) -> dict:
+    """
+    Trigger scene
+    :param home_id: ID of the home (user who is used to "Link Devices by App Account" should be a "Home Owner")
+    :param scene_id: Scene ID within Tuya App.
+    :return: Dictionary with with HTTP response.
+    """
+    base_url = _url_format(id=home_id, endpoint='scenes', url=HOME_URL)
+
+    response = requests.post(
+        url=f"{base_url}/{scene_id}/trigger",
+        headers=_api_request_headers(),
+    )
+
+    _logger(response=response)
+    return json.loads(response.content.decode())
